Fix white space at bottom of parallax

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -5,6 +5,7 @@ header {
   padding: 310px 0 0vw;
   position: relative;
   transform-style: inherit;  
+  // height: 900px
   
 }
 
@@ -13,7 +14,7 @@ header {
 // }
 
 header, header:before {
-  background: 50% 50% / cover;
+  // background: 50% 50% / cover;
 }
 
 header::before {
@@ -27,10 +28,10 @@ header::before {
   // background-image: url("https://images.unsplash.com/photo-1524169358666-79f22534bc6e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80");
   background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
   background-size: cover;
-  transform-origin: center center 0;
+  // transform-origin: center center 0;
   transform: translateZ(-1px) translateY(-7em)scale(2.2);
   z-index: -1;
-  min-height: 100vh;
+  min-height: 120vh;
     // clip-path: polygon(100% 0%, 100% 70%, 50% 90%, 50% 90%, 0 70%, 0 0);
 
 }
