--- a/src/styles/sections.scss
+++ b/src/styles/sections.scss
@@ -25,7 +25,7 @@
   width: 100%;
   transform: translateY(3%);
   background: rgb(33, 31, 54);
-  margin-top: 6em;
+  // margin-top: 3em;
   
 }
 
